# llm-lab

./: .gitignore  AGENTS.md  README.md  TODO.md  pyproject.toml  pyrightconfig.json  train.py
artifacts/: memory_architecture_kaggle_speed_p100_2026-05-17.json  memory_architecture_kaggle_speed_t4x2_2026-05-17.json
configs/: 017_tokenized_decoder_jax.toml
docs/: future_projects.md  kaggle.md  learning_log.md  llm_roadmap.md  memory_architecture.md  memory_architecture_learning_log.md  next_steps_roadmap.md  personal_context.md  phase four.md  phase4.md  phase_1_foundations.md  phase_1_learning_log.md  phase_2_learning_log.md  phase_2_scaling.md  phase_3_bootstrap.md  phase_3_learning_log.md  phase_3_systems.md  phase_4_learning_log.md  project_direction.md  vast_ai.md
experiments/: 001_bigram_jax.py  002_mlp_jax.py  003_context_window_linear.py  004_context_window_mlp.py  005_larger_context_mlp_jax.py  006_vanilla_rnn.py  007_vanilla_rnn.py  008_gru.py  009_single_head_attention_jax.py  010_single_head_attention_jax.py  011_attention_residual.py  012_attention_residual_layer_norm.py  013_attention_residual_layer_norm_ffn_jax.py  014_single_block_decoder_only_transformer_jax.py  015_single_block_multi_head_decoder_only_transformer_jax.py  016_small_multi_layer_decoder_jax.py  017_tokenized_small_multi_layer_decoder.py  018_decoder_refactor.py  019_fineweb_edu_shards.py  020_fineweb_edu_multi_shard.py  021_tpu_fineweb_edu_multi_shard.py  022_tpu_fineweb_edu_scaling_baseline.py  023_tpu_fineweb_edu_observability.py  024_tpu_fineweb_edu_batch_size_sweep.py  (+10 more)
lib/: data.py  (+7 more)
(+184 files in other folders)
